# oAuthKitchen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESTRUCTURING_ROADMAP.md  oauthkitchen.sample.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/lib/analyzers/: translator.ts
src/lib/utils/: cache.ts  config.ts  logger.ts
src/oauthkitchen/: __init__.py  cli.py  config.py  graph_client.py  models.py
src/oauthkitchen/analyzers/: __init__.py  scoring.py  shadow.py  translator.py
src/oauthkitchen/collectors/: __init__.py  applications.py  base.py  orchestrator.py  permissions.py  service_principals.py
src/oauthkitchen/reporters/: __init__.py  base.py  csv_export.py  html.py  json_export.py  markdown.py
src/oauthkitchen/templates/: report.html  summary.md
src/oauthkitchen/utils/: __init__.py  cache.py  logging.py
src/types/: models.ts
tests/: __init__.py  conftest.py  test_models.py  test_scoring.py  test_shadow.py  test_translator.py
web/backend/: Dockerfile  requirements.txt
web/backend/app/: __init__.py  auth.py  config.py  database.py  main.py  schemas.py
web/backend/app/routers/: auth.py  dashboard.py  permissions.py  scans.py  tenants.py
web/backend/app/services/: scanner.py
web/frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/public/: 404.html  permissions.json
web/frontend/src/: App.tsx  index.css  main.tsx
web/frontend/src/components/: Layout.tsx  RiskBadge.tsx  StatsCard.tsx
web/frontend/src/components/ui/: badge.tsx  button.tsx
web/frontend/src/lib/: msalConfig.ts  utils.ts
web/frontend/src/lib/analyzers/: scoring.ts  shadow.ts  translator.ts
web/frontend/src/lib/api/: graphClient.ts
web/frontend/src/lib/api/collectors/: applications.ts  orchestrator.ts  servicePrincipals.ts
web/frontend/src/lib/store/: index.ts  scanStore.ts  settingsStore.ts
web/frontend/src/lib/utils/: logger.ts
web/frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Permissions.tsx  ScanDetail.tsx  Scans.tsx  Settings.tsx  Tenants.tsx
web/frontend/src/types/: models.ts
